--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/stack": "5.12.8",
     "react": "18.2.0",
-    "react-native": "0.72.11"
+    "react-native": "0.72.11",
+    "react-native-solana-library": "link:./modules/solana-library"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
